--- a/siri-simulation/SiriSimulation.resx
+++ b/siri-simulation/SiriSimulation.resx
@@ -117,4 +117,29 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAXAAAAYQAAAIIAAABzAAAAIwAAABoAAABoAAAAgwAAAFoAAABSAAAAAwAA
+        AAAAAAAAAAAAAAAAAAAAAAAWAAAAVwAAACMAAABAAAAAPAAAAEkAAABRAAAAIwAAAFUAAAAEAAAAUgAA
+        AFIAAAAAAAAAAAAAAAAAAAAZAAAAVgAAACMAAAANAAAAUQAAACQAAABVAAAASwAAABMAAABzAAAALQAA
+        AFAAAABQAAAAFQAAAAAAAAAAAAAATgAAAE4AAAAAAAAADQAAAB0AAAAdAAAAWQAAAFEAAAAaAAAAEwAA
+        ADgAAABgAAAAOQAAAFUAAAAJAAAAKAAAAFYAAABbAAAAGwAAABoAAABRAAAAXgAAAGgAAABtAAAAeAAA
+        ADMAAAAhAAAAawAAAAsAAABaAAAAHAAAAEIAAAAqAAAACAAAABQAAABPAAAAFgAAABEAAABZAAAATgAA
+        AAgAAAAcAAAAUwAAAHcAAABgAAAASQAAAAEAAAAkAAAAXQAAAC0AAAAHAAAAFQAAAAcAAAAwAAAAaQAA
+        AGEAAAAeAAAAfgAAACoAAAAgAAAAMwAAAH0AAAAXAAAAFwAAAGgAAAAtAAAADwAAABwAAAAYAAAASwAA
+        AHAAAABeAAAAGQAAADgAAAANAAAAcwAAABoAAAAuAAAAQwAAADAAAABGAAAAHAAAAA0AAABZAAAAHgAA
+        ABIAAABXAAAAUwAAAFsAAABvAAAACQAAAC4AAABWAAAAXgAAAEsAAAARAAAAbwAAACoAAAAiAAAAYAAA
+        ADgAAAAWAAAAXwAAAFEAAAAIAAAAKAAAAGIAAAAFAAAAHgAAAF4AAAA/AAAAAAAAAEwAAAAsAAAAUwAA
+        AA8AAAAOAAAARwAAAHUAAABdAAAANwAAADoAAABcAAAAYQAAAGEAAAAtAAAABQAAAAAAAAAaAAAAdQAA
+        AC0AAAAAAAAAJwAAAEAAAABiAAAAZwAAAFYAAABQAAAAYQAAACgAAAAvAAAAZgAAAAYAAAAAAAAAAQAA
+        AE4AAAASAAAADAAAAAIAAAAPAAAAXQAAAEwAAAAiAAAASAAAAHUAAAA7AAAAVQAAADMAAAABAAAAAAAA
+        AAAAAAAsAAAAYQAAAGEAAAAFAAAADwAAAF0AAABLAAAAKQAAAHAAAAAzAAAAdgAAAE4AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAADYAAABBAAAAAAAAABoAAABkAAAAcgAAAAsAAAAsAAAAkQAAAB0AAAAFAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAPAAAAWAAAAFEAAABdAAAANAAAAGUAAABfAAAAaQAAACYAAAABAAAAAAAA
+        AAAAAAAA4AMAAMADAACAAQAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAACIAAAAgAAAAMAD
+        AADkAwAA4AcAAA==
+</value>
+  </data>
 </root>
